finishing up Home component, beginning work on Portfolio component

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -75,7 +75,7 @@
 
         a.about-link {
             &:after {
-                content: 'ABOUT'
+                content: 'PORTFOLIO'
             }
         }
 
