--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -44,13 +44,24 @@
         }
     }
 
-    .photo-zone {
+    .about-zone {
         img {
-            width: 40%;
+            width: 35%;
             height: auto;
             float: right;
-            transform: translateY(35%);
-            padding-right: 5%;
+            transform: translateY(95%);
+            border-radius: 10%;
+            margin-right: 10%;
+        }
+
+        p {
+            text-align: center;
+            position: absolute;
+            margin-left: 56%;
+            margin-right: 11%;
+            transform: translateY(18%);
+            color: #fff;
+            font-size: large;
         }
     }
 }
